[gd_scene load_steps=2 format=3 uid="uid://cjmc86issljty"]

[ext_resource type="Script" path="res://ui/UIscene.gd" id="1_c0mo0"]

[node name="UIscene" type="VBoxContainer"]
offset_right = 500.0
offset_bottom = 500.0
script = ExtResource("1_c0mo0")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="test" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Welcome  to ConductVR! 
Please select HOST to start a new room.
To join a room, enter the host IP address then press JOIN."
horizontal_alignment = 1

[node name="TextBox" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="TextBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "To join, enter the host's IP here"
alignment = 1
expand_to_text_length = true

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="Buttons"]
layout_mode = 2
text = "HOST"

[node name="Join" type="Button" parent="Buttons"]
layout_mode = 2
text = "JOIN"

[node name="IPContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="IPContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Your IP is:"
horizontal_alignment = 1

[connection signal="pressed" from="Buttons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Buttons/Join" to="." method="_on_join_pressed"]
